update 2 with fixes to justify-content, child properties.  Need to fix align-content and flex-shrink

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,21 @@
   border: 1px solid black;
 }
 
+.container-2 {
+  padding: 20px;
+  border:
+   1px solid black;
+}
+.flex-container-4 div {
+  padding: 10px;
+  border: 1px solid black;
+}
+
 .container-5 {
   height: 200px;
   padding: 10px;
   border: 1px solid black;
 }
-
 
 /*Example 1:  Display: Flex and Flex Direction*/
 
@@ -94,16 +103,17 @@
 
   /* Example 8: Flex-Grow */
   /* display: flex;
-  flex-grow: 2; */
+  flex-grow: 7; */
 
 
   /* Example 9: Flex-Shrink */
-  /*display: flex;
-  flex-shrink: 2; */
+  /* display: flex;
+  flex-shrink: 0; */
+
 
   /* Example 10: Flex-Basis */
-  /* display: flex; */
-  /* flex-basis: 40%; */
+  /* display: flex;
+  flex-basis: 50%; */
   /* flex-basis: auto; */
 }
 
@@ -133,7 +143,8 @@
   background-color: red;
 }
 
-.flex-Item-D {
-  width: 25%;
-  border: 1px solid black;
+
+.flex-item-D {
+  width: 20%;
+  background-color: orange;
 }
